2004-12-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_parse_blockgroup):
	  Save position, so that queries give proper return values. Don't
	  know how this could ever have worked before...

2004-12-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Put additional LAME check inside the conditional.  Fixes #152339

2004-12-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_stream_index),
	(gst_avi_demux_stream_scan):
	  Add some more debug. Fix logic error when setting movi offset
	  while reading index.

2004-12-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_stream_index),
	(gst_avi_demux_stream_scan), (gst_avi_demux_handle_seek),
	(gst_avi_demux_process_next_entry):
	  Add some debugging. Better detection of broken indexes and the
	  accompanying index recovery. No infinite loops on state changes
	  when we're still in our loopfunction.

2004-12-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	  Fix up.

2004-12-22  Archana Shah  <archana.shah@wipro.com>

	Reviewed by:  Ronald S. Bultje <rbultje@ronald.bitfreak.net>

	* sys/sunaudio/gstsunmixer.c: (gst_sunaudiomixer_set_volume):
	  Normalizing the value before setting
	(gst_sunaudiomixer_get_volume):
	  Normalizing the value after getting. Fixes bug# 161980

2004-12-22  Christian Fredrik Kalager Schaller  <uraeus@gnome.org>

	* Makefile.am: Make sure docs gets disted
	* docs/Makefile.am: Make sure all needed files get disted
	* gst-plugins.spec.in: latest updates

2004-12-22  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (gst_play_base_bin_add_element):
	Revert patch 1.38 as clock distribution over schedulers does
	not work correcly in the core yet.

2004-12-21  Stephane Loeuillet  <stephane.loeuillet@tiscali.fr>

	* sys/oss/README: remove this file, which predates my birth